fixtures/cascading/valid/02-nested-three-deep/apps/web/.anatomy
anatomy_version = "0.2"
tagline = "web app"

[identity]
fingerprint = "jtambmygx3gzs949jr3f"

[identity.stack]
id = "typescript"
hash = "jtamb"

[identity.form]
id = "web-app"
hash = "mygx3"

[identity.domain]
id = "ai-assistant"
hash = "gzs94"

[identity.function]
id = "browser-client"
hash = "9jr3f"

[generated]
at = 2026-05-06T12:00:00.000Z
by = "test"
model = "none"
schema = "https://anatomy.dev/spec/0.2/schema.json"
